--- a/products2.html
+++ b/products2.html
@@ -12,7 +12,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg fixed-top"style="background-color:#0071c5; color: white">
   	<a class="navbar-brand" href="index.html">Mivi</a>
-  	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  	<button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   	</button>
 
