--- a/products3.html
+++ b/products3.html
@@ -42,41 +42,20 @@
 	  	</div>
 	</nav>
 	<div class="container features">
-        <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3 class="feature-title">Lorem ipsum</h3>
-                <img src="images/column-1.jpg" class="img-fluid">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3 class="feature-title">Lorem ipsum</h3>
-                <img src="images/column-2.jpg" class="img-fluid">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis</p>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3 class="feature-title">Lorem ipsum</h3>
-                <img src="images/column-2.jpg" class="img-fluid">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3 class="feature-title">Lorem ipsum</h3>
-                <img src="images/column-1.jpg" class="img-fluid">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3 class="feature-title">Lorem ipsum</h3>
-                <img src="images/column-2.jpg" class="img-fluid">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis</p>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3 class="feature-title">Lorem ipsum</h3>
-                <img src="images/column-2.jpg" class="img-fluid">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis</p>
-            </div>
-        </div>
-        </div>
-    </div>
+    <ul class="nav nav-tabs">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">Active</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      </li>
+    </ul>      
+  </div>
 </body>
 </html>
