--- a/products3.html
+++ b/products3.html
@@ -32,7 +32,7 @@
 	        </div>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#">Support</a>
+	        <a class="nav-link" href="support.html">Support</a>
 	      </li>
 	    </ul>
 	    <form class="form-inline my-2 my-lg-0">
