--- a/support.html
+++ b/support.html
@@ -8,9 +8,9 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<script src="script/jquery-3.5.1.min.js"></script>
 	<script src="bootstrap/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="jquery-ui.min.css">
-	<script type="text/javascript" src="jquery-3.1.1.min.js"></script>
-	<script type="text/javascript" src="jquery-ui.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="/script/jquery-ui.min.css">
+	<script type="text/javascript" src="script/jquery-3.5.1.min.js"></script>
+	<script type="text/javascript" src="script/jquery-ui.min.js"></script>
 	<script type="text/javascript">
 			$(function(){
 				$('#accordion').accordion();
@@ -40,7 +40,7 @@
 	        </div>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#">Support</a>
+	        <a class="nav-link" href="support.html">Support</a>
 	      </li>
 	    </ul>
 	    <form class="form-inline my-2 my-lg-0">
