--- a/support graphic.html
+++ b/support graphic.html
@@ -50,15 +50,15 @@
 	  	</div>
     </nav><br><br><br>
 	<div id="accordion">
-				<h3>Permasalahan Graphics 1</h3>
+				<h3>FAQ Processor Problem</h3>
 				<div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipsicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna liqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
 				</div>
-				<h3>Permasalahan Graphics 2</h3>
+				<h3>FAQ Graphics Problem</h3>
 				<div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipsicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna liqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
 				</div>
-				<h3>Permasalahan Graphics 3</h3>
+				<h3>FAQ Drivers Problem</h3>
 				<div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipsicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna liqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
 				</div>
