--- a/products.html
+++ b/products.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 	<title>Products</title>
-	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<script src="script/jquery-3.5.1.min.js"></script>
 	<script src="bootstrap/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="/script/jquery-ui.min.css">
+	<script type="text/javascript" src="script/jquery-3.5.1.min.js"></script>
+	<script type="text/javascript" src="script/jquery-ui.min.js"></script>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg fixed-top"style="background-color:#0071c5; color: white">
