--- a/products3.html
+++ b/products3.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 	<title>Products</title>
-	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<script src="script/jquery-3.5.1.min.js"></script>
 	<script src="bootstrap/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="script/jquery-ui.min.css">
+	<script type="text/javascript" src="script/jquery-3.5.1.min.js"></script>
+	<script type="text/javascript" src="script/jquery-ui.min.js"></script>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg fixed-top"style="background-color:#0071c5; color: white">
@@ -41,31 +43,62 @@
 	    </form>
 	  	</div>
 	</nav>
-	<div class="container">
-    <h1>Membuat Navigasi Tabs dan Pills Bootstrap | www.malasngoding.com</h1>
-    <br/>
-  
-    <ul class="nav nav-tabs">
-      <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
-      <li><a data-toggle="tab" href="#menu1">Menu 1</a></li>
-      <li><a data-toggle="tab" href="#menu2">Menu 2</a></li>
+  <div class="container" style="padding-top: 15%;">
+		<ul class="nav nav-pills nav-fill" id="pills-tab" role="tablist">
+      <li class="nav-item" role="presentation">
+        <a class="nav-link active" id="pills-processors-tab" data-toggle="pill" href="#pills-processors" role="tab" aria-controls="pills-processors" aria-selected="true">Processors</a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link" id="pills-graphics-tab" data-toggle="pill" href="#pills-graphics" role="tab" aria-controls="pills-graphics" aria-selected="false">Graphics</a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link" id="pills-auto-tab" data-toggle="pill" href="#pills-auto" role="tab" aria-controls="pills-auto" aria-selected="false">Auto</a>
+      </li>
     </ul>
-  
-    <div class="tab-content">
-      <div id="home" class="tab-pane fade in active">
-        <h3>HOME</h3>
-        <p>www.malasngoding.com</p>
+    <div class="tab-content" id="pills-tabContent">
+      <div class="tab-pane fade show active" id="pills-processors" role="tabpanel" aria-labelledby="pills-processors-tab">
+        <div class="container" style="padding-top: 2%;">
+          <center>
+          <div class="row">
+            <div class="col">
+              Download latest driver for your processors
+            </div>
+            <div class="col">
+              <button type="button" class="btn btn-primary">Download</button>
+            </div>
+          </div>
+        </center>
+        </div>
       </div>
-      <div id="menu1" class="tab-pane fade">
-        <h3>Menu 1</h3>
-        <p>Tutorial pemrograman web, mobile dan design</p>
+      <div class="tab-pane fade" id="pills-graphics" role="tabpanel" aria-labelledby="pills-graphics-tab">
+        <div class="container" style="padding-top: 2%;">
+          <center>
+          <div class="row">
+            <div class="col">
+              Download latest driver for your graphics
+            </div>
+            <div class="col">
+              <button type="button" class="btn btn-primary">Download</button>
+            </div>
+          </div>
+        </center>
+        </div>
       </div>
-      <div id="menu2" class="tab-pane fade">
-        <h3>Menu 2</h3>
-        <p>Membuat navigasi tabs dan pills bootstrap.</p>
+      <div class="tab-pane fade" id="pills-auto" role="tabpanel" aria-labelledby="pills-auto-tab">
+        <div class="container" style="padding-top: 2%;">
+          <center>
+          <div class="row">
+            <div class="col">
+              Download latest driver for both of your processors and graphics
+            </div>
+            <div class="col">
+              <button type="button" class="btn btn-primary">Download</button>
+            </div>
+          </div>
+        </center>
+        </div>
       </div>
     </div>
-  
   </div>
 </body>
 </html>
